# audio-studio

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup_clone.ps1  setup_dfn.ps1  一鍵清理.bat  錄音工作室.bat
.streamlit/: config.toml  secrets.toml.example
audio_studio/: __init__.py  analyze.py  cli.py  clone.py  commands.py  edit.py  eleven.py  environment.py  ffmpeg_utils.py  pipeline.py  transcribe.py  tts.py
tests/: run_tests.ps1  test_commands.py  test_utils.py
